// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getConfig datasource with env var - ignoreEnvVarErrors 1`] = `
"{
  "generators": [],
  "datasources": [
    {
      "name": "db",
      "provider": "postgresql",
      "activeProvider": "postgresql",
      "url": {
        "fromEnvVar": "SOMETHING-SOMETHING-1234",
        "value": null
      },
      "schemas": []
    }
  ],
  "warnings": []
}"
`;

exports[`getConfig datasource with env var 1`] = `
"{
  "generators": [],
  "datasources": [
    {
      "name": "db",
      "provider": "postgresql",
      "activeProvider": "postgresql",
      "url": {
        "fromEnvVar": "TEST_POSTGRES_URI_FOR_DATASOURCE",
        "value": "postgres://user:password@something:5432/db"
      },
      "schemas": []
    }
  ],
  "warnings": []
}"
`;

exports[`getConfig empty config 1`] = `
"{
  "generators": [],
  "datasources": [
    {
      "name": "db",
      "provider": "sqlite",
      "activeProvider": "sqlite",
      "url": {
        "fromEnvVar": null,
        "value": "file:../hello.db"
      },
      "schemas": []
    }
  ],
  "warnings": []
}"
`;

exports[`getConfig with generator and datasource 1`] = `
"{
  "generators": [
    {
      "name": "gen",
      "provider": {
        "fromEnvVar": null,
        "value": "fancy-provider"
      },
      "output": null,
      "config": {},
      "binaryTargets": [
        {
          "fromEnvVar": null,
          "value": "TEST_PLATFORM",
          "native": true
        }
      ],
      "previewFeatures": []
    }
  ],
  "datasources": [
    {
      "name": "db",
      "provider": "sqlite",
      "activeProvider": "sqlite",
      "url": {
        "fromEnvVar": null,
        "value": "file:dev.db"
      },
      "schemas": []
    }
  ],
  "warnings": []
}"
`;
